Mejorando la estetica de techstack con iconos flotantes y lineas matrix

--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -176,7 +176,7 @@
   "techStack": {
     "title": "Tecnologías que utilizamos en",
     "subtitle": "Node para llevar a tu proyecto a la cima de la innovación",
-    "description": "Nuestro stack tecnológico combina las mejores herramientas de Machine Learning, desarrollo web y DevOps para crear soluciones robustas y escalables.",
+    "description": "Nuestro stack tecnológico combina las mejores herramientas para crear soluciones robustas y escalables.",
     "cta": {
       "question": "¿Listo para transformar tu negocio con estas tecnologías?",
       "button": "Iniciar Proyecto"
